fix ul align on the menu mobile version

--- a/CSS/home style/home_header.css
+++ b/CSS/home style/home_header.css
@@ -98,7 +98,7 @@
     }
 
     .menu ul {
-        display: flex;
+        flex: 1;
         flex-direction: column;
         align-items: center;
     }
